[gd_scene load_steps=2 format=3 uid="uid://dvvvgs86m0n5g"]

[ext_resource type="Script" path="res://Main Room/hud.gd" id="1_lrkut"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lrkut")

[node name="HappinessBar" type="ProgressBar" parent="."]
offset_right = 382.0
offset_bottom = 43.0
value = 100.0

[node name="EnergyBar" type="ProgressBar" parent="."]
offset_top = 60.0
offset_right = 382.0
offset_bottom = 103.0
value = 100.0

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FruitCatchButton" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2
text = "Play Fruit Catch!"

[connection signal="pressed" from="FruitCatchButton" to="." method="_on_fruit_catch_button_pressed"]
